RESOLVED FIXED147386
AX: iOS: VoiceOver hangs indefinitely when an JS alert appears
https://bugs.webkit.org/show_bug.cgi?id=147386
Summary AX: iOS: VoiceOver hangs indefinitely when an JS alert appears
chris fleizach
Reported 2015-07-28 17:07:35 PDT
Whenever a JS Alert appears, Voiceover hangs indefinitely
Attachments
patch (2.94 KB, patch)
2015-07-28 17:09 PDT, chris fleizach
andersca: review+
cfleizach: commit-queue-
chris fleizach
Comment 1 2015-07-28 17:07:50 PDT
chris fleizach
Comment 2 2015-07-28 17:09:26 PDT
chris fleizach
Comment 3 2015-07-28 17:46:00 PDT
David Kilzer (:ddkilzer)
Comment 4 2015-07-30 18:29:08 PDT
Comment on attachment 257703 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=257703&action=review > Source/WebKit2/Platform/IPC/mac/ConnectionMac.mm:611 > +static void AccessibilityProcessSuspendedNotification(bool suspended) I think a enum might be clearer than a bool here. Something to fix in the future.
Note You need to log in before you can comment on or make changes to this bug.