AX: iOS: VoiceOver hangs indefinitely when an JS alert appears https://bugs.webkit.org/show_bug.cgi?id=147386

Reviewed by Anders Carlsson.

Support the iOS platform API to notify accessibility clients when the WebProcess is about to suspend (because of some modal dialog).
Luckily, we did all the hardwork for OSX a few years ago to support this paradigm.

* Platform/IPC/mac/ConnectionMac.mm:
(IPC::AccessibilityProcessSuspendedNotification):
(IPC::Connection::willSendSyncMessage):
(IPC::Connection::didReceiveSyncReply):



Canonical link: https://commits.webkit.org/165479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187530 268f45cc-cd09-0410-ab3c-d52691b4dbfc